inserimento struttura base dropdown menù

--- a/index.html
+++ b/index.html
@@ -19,11 +19,54 @@
 
         <div class="right_items">
           <a href="#">Pricing</a>
-          <a href="#">Accounts</a>
-          <a href="#">Products</a>
-          <a href="#">Company</a>
-          <a href="#">Help</a>
-          <a href="#">EN</a>
+
+          <a class="acc" href="#">Accounts</a>
+          <!-- menù di dropdown su Accounts -->
+          <div id="drop_accounts">
+            <a href="#">Standard</a>
+            <a href="#">Premium</a>
+            <a href="#">Metal</a>
+          </div>
+
+          <a class="prod" href="#">Products</a>
+          <!-- menù di dropdown su Products -->
+          <div id="drop_products">
+            <a href="#">Money Transfer</a>
+            <a href="#">Vaults</a>
+            <a href="#">Budgeting</a>
+            <a href="#">Perks</a>
+            <a href="#">Cryptocurrency</a>
+            <a href="#">Mobile Phone Insurance</a>
+            <a href="#">Overseas Medial Insurance</a>
+            <a href="#">Open Banking API</a>
+            <a href="#">Apple Pay</a>
+          </div>
+
+          <a class="comp" href="#">Company</a>
+          <!-- menù di dropdown su Company -->
+          <div id="drop_company">
+            <a href="#">About</a>
+            <a href="#">Blog</a>
+            <a href="#">Careers</a>
+            <a href="#">Affiliates</a>
+            <a href="#">Influencers</a>
+            <a href="#">Contact</a>
+          </div>
+
+          <a class="help" href="#">Help</a>
+          <!-- menù di dropdown su Company -->
+          <div id="drop_help">
+            <a href="#">Community</a>
+            <a href="#">Help Center</a>
+          </div>
+
+          <a class="lang" href="#">EN</a>
+          <!-- menù di dropdown su EN -->
+          <div id="drop_en">
+            <a href="#">Italiano</a>
+            <a href="#">English</a>
+          </div>
+
           <a href="#"><button type="button" name="button">Get the App</button></a>
         </div>
 
