--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
 
     <header>
       <nav class="cont_center">
-
+        <!-- menù sx -->
         <div class="left_items">
           <a href="#"><img src="img/revolut-logo.png" alt="revolut-logo"></a>
           <a href="#">personal</a>
           <a href="#">business</a>
         </div>
 
+        <!-- menù dx -->
         <div class="right_items">
-          <a href="#">Pricing</a>
+          <a class="price" href="#">Pricing</a>
 
           <a class="acc" href="#">Accounts</a>
           <!-- menù di dropdown su Accounts -->
           <div id="drop_accounts">
             <a href="#">Standard</a>
+            <br>
             <a href="#">Premium</a>
+            <br>
             <a href="#">Metal</a>
           </div>
 
@@ -32,13 +35,21 @@
           <!-- menù di dropdown su Products -->
           <div id="drop_products">
             <a href="#">Money Transfer</a>
+            <br>
             <a href="#">Vaults</a>
+            <br>
             <a href="#">Budgeting</a>
+            <br>
             <a href="#">Perks</a>
+            <br>
             <a href="#">Cryptocurrency</a>
+            <br>
             <a href="#">Mobile Phone Insurance</a>
+            <br>
             <a href="#">Overseas Medial Insurance</a>
+            <br>
             <a href="#">Open Banking API</a>
+            <br>
             <a href="#">Apple Pay</a>
           </div>
 
@@ -46,10 +57,15 @@
           <!-- menù di dropdown su Company -->
           <div id="drop_company">
             <a href="#">About</a>
+            <br>
             <a href="#">Blog</a>
+            <br>
             <a href="#">Careers</a>
+            <br>
             <a href="#">Affiliates</a>
+            <br>
             <a href="#">Influencers</a>
+            <br>
             <a href="#">Contact</a>
           </div>
 
@@ -57,6 +73,7 @@
           <!-- menù di dropdown su Company -->
           <div id="drop_help">
             <a href="#">Community</a>
+            <br>
             <a href="#">Help Center</a>
           </div>
 
@@ -64,18 +81,19 @@
           <!-- menù di dropdown su EN -->
           <div id="drop_en">
             <a href="#">Italiano</a>
+            <br>
             <a href="#">English</a>
           </div>
 
-          <a href="#"><button type="button" name="button">Get the App</button></a>
+          <!-- bottone -->
+          <a href="#"><button class="get_button" type="button" name="button">Get the App</button></a>
         </div>
-
       </nav>
-
     </header>
 
 
     <section>
+
 
     </section>
 
